[package]
name = "build_warren"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.38", features = ["derive"] }
console = "0.15.11"
curl = "0.4.47"
indicatif = "0.17.11"
mockito = "1.7.0"
onig = "6.5.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
